# Renderer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
models/: courtyard.mtl  courtyard.scene  sponza.mtl  sponza.scene
src/: App.cpp  App.h  Geometry.h  Mesh.h  Scene.cpp  Scene.h  SkyBox.cpp  SkyBox.h  main.cpp
src/Render/: BBox.h  Bitmap.h  Camera.cpp  Camera.h  Frustum.cpp  Render.h
src/Render/Pipeline/: CommandList.cpp  CommandList.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  Sampling.cpp  Sampling.h  Surface.h
src/Resources/: Bmp.cpp  Model.cpp  Model.h  Png.cpp  Resources.h  Tga.cpp  Tga.h
src/Shaders/: Common.h  Depth.cpp  Depth.h  Effects.cpp  Effects.h  Lighting.cpp  Lighting.h  Normal.cpp  Normal.h  ShaderData.h  Simple.cpp  Simple.h  Sky.cpp  Sky.h  Transform.cpp  Transform.h
src/Utility/: Affinity.h  Math.h
textures/: bricks_n.tga
